# Iot_Technologie

./: CMakeLists.txt  README.md  dockerfile  entrypoint.sh  main.c  makerfile
.github/workflows/: github-actions-demo.yml
